# framework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  run_check.sh  suppressions.txt
cmake/: config.cmake  frameworkConfig.cmake.in
include/: MemoryPool.hpp  Observer.hpp  Subject.hpp  TemplateDebug.hpp  Test.h  Timer.h  Utils.h
scripts/: Timer.py
src/: Test.cpp  Timer.cpp
tests/: CMakeLists.txt  MemoryPoolTest.cpp  ObserverTest.cpp  TemplateDebug_test.cpp  timer_tests.cpp
